fix: fix issues

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/EnvClusterChip.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Components/EnvClusterChip.razor
@@ -1,4 +1,4 @@
-﻿<MChip OnClick="OnClick" Ripple=false Small Outlined Class="@Class" Style="@Style">
+﻿<MChip Color="#e0e0e0" OnClick="OnClick" Ripple=false Small Outlined Class="@Class" Style="@Style">
     <div style="@($"color: {EnvironmentColor} !important")" class="text-overflow">@EnvironmentName</div>&nbsp;&nbsp;
     <div style="color:#05CD99">@ClusterName</div>
 </MChip>
