--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Team.razor
@@ -8,7 +8,7 @@
             <ChildContent>
                 <span class="mtab-tab-line mtab-tab-linear-primary"></span>
                 <span class="rounded-circle mtab-tab-indicator mtab-tab-indicator-primary"></span>
-                <span class="mtab-tab-title">@T("Project")</span>
+                <span class="mtab-tab-title">@T("Team detail")</span>
             </ChildContent>
         </MTab>
         <MTab class="text-capitalize pa-0" Disabled="_teamDetailDisabled">
