--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
@@ -53,10 +53,10 @@
                 </div>
             </MCard>
         </MHover>
-    </MCol> 
+    </MCol>
 </MRow>
 
-<SSheetDialog @key="_labelModal.Visible" Value="_labelModal.Visible" ValueChanged="LabelModalValueChanged" Title="@(_labelModal.HasValue ? T("Edit label") : T("Add label"))" Icon="mdi-circle" IconColor="success">
+<SSheetDialog @key="@($"labelModal-{_labelModal.Visible}")" Value="_labelModal.Visible" ValueChanged="LabelModalValueChanged" Title="@(_labelModal.HasValue ? T("Edit label") : T("Add label"))" Icon="mdi-circle" IconColor="success">
     <MForm Class="full-height" Context="formContext" EnableValidation Model="_labelModal.Data">
         <div class="d-flex flex-column" style="width:100%; height:100%; padding:  48px 228px; overflow: hidden;">
             <div class="full-height" style="overflow-y: auto;">
@@ -85,8 +85,12 @@
                 </div>
                 <MTextarea Class="mt-12" Outlined Label="@T("Description")" @bind-Value="_labelModal.Data.Description"></MTextarea>
             </div>
-            <div class="d-flex justify-space-between align-end" style="width:100%;">
-                <SButton Text Color="error" Small OnClick="()=>RemoveLabelAsync(_labelModal.Data.TypeCode)">@T("Delete")</SButton>
+            <div class="d-flex" style="width:100%;">
+                @if (_labelModal.HasValue)
+                {
+                    <SButton Text Color="error" Small OnClick="()=>RemoveLabelAsync(_labelModal.Data.TypeCode)">@T("Delete")</SButton>
+                }
+                <MSpacer />
                 <SButton Small OnClick="()=>SubmitLabelAsync(formContext)">@(_labelModal.HasValue ? T("Save") : T("Submit"))</SButton>
                 </div>
             </div>
