chore: code review

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -785,7 +785,7 @@
             </div>
         </div>
         <div class="d-flex justify-end align-end" style="width:100%;">
-            <MButton Height="40" Class="rounded-pill" Color="primary" OnClick="RollbackToAsync">@T("Rollback to this version")</MButton>
+            <MButton Height="40" Class="rounded-pill mt-6" Color="primary" OnClick="RollbackToAsync">@T("Rollback to this version")</MButton>
         </div>
     </div>
 </SSheetDialog>
