--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
@@ -146,7 +146,7 @@
                                                             ValueChanged="value=>CloneConfigObjectNameChanged(configObject,value)"></STextField>
                                                     </div>
                                                     <span class="ml-3 regular3--text btn">|</span>
-                                                    <sapn class="ml-2 regular3--text btn">properties</sapn>
+                                                    <sapn class="ml-2 regular3--text btn">Properties</sapn>
                                                 </div>
                                             </ChildContent>
                                             <ActionsContent>
