fix: fix scrollbar

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/App.razor
@@ -6,7 +6,7 @@
         <div style="min-width:300px; padding:0 24px; display:flex; flex-direction:column; align-items:center;">
             <div style="width:100%; overflow-x: hidden;" class="regular--text">
                 <MRow NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.SpaceBetween">
-                    <div class="emphasis--text h6" style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">@_projectDetail.Name</div>
+                    <div class="emphasis--text h6 text-overflow2">@_projectDetail.Name</div>
                 </MRow>
                 <MRow NoGutters Class="body2">
                     @_projectDetail.Identity
