--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -3,11 +3,11 @@
 
 <div class="d-flex">
     <MNavigationDrawer Right Permanent Class="rounded-4" Width="300" Style="@Style">
-        <div style="min-width:300px; padding:16px 24px; display:flex; flex-direction:column; align-items:center; overflow: auto;">
+        <div style="min-width:300px; padding:16px 24px; display:flex; flex-direction:column; align-items:center; overflow: hidden;">
             <div style="width:100%;" class="regular--text body2">
                 <MRow NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.SpaceBetween">
                     <div class="full-width d-flex">
-                        <div class="emphasis--text h6">@_appDetail.Name</div>
+                        <div class="emphasis--text h6 text-overflow2">@_appDetail.Name</div>
                         <MSpacer></MSpacer>
                         <MMenu OffsetY>
                             <ActivatorContent>
@@ -47,55 +47,57 @@
                         </MMenu>
                     </div>
                 </MRow>
-                <MRow NoGutters Class="regular3--text body2">
+                <div class="regular3--text body2 text-overflow">
                     @if (ConfigObjectType == ConfigObjectType.App)
                     {
-                        <div class="regular--text">@_appDetail.Type</div>
+                        <span class="regular--text">@_appDetail.Type</span>
                         <span>&nbsp;|&nbsp;</span>
                     }
                     @_appDetail.Identity
-                </MRow>
-                @if (ConfigObjectType == ConfigObjectType.App)
-                {
-                    <MRow NoGutters Class="mt-4">
-                        @_appDetail.Description
+                </div>
+                <div style="height: calc(100vh - 320px); overflow: auto;">
+                    @if (ConfigObjectType == ConfigObjectType.App)
+                    {
+                        <MRow NoGutters Class="mt-4">
+                            @_appDetail.Description
+                        </MRow>
+                    }
+                    <MRow NoGutters Class="regular3--text btn mt-6">@T("Environment")</MRow>
+                    <MRow NoGutters>
+                        <MChipGroup Column>
+                            @foreach (var item in _appEnvs)
+                            {
+                                var isSelected = _selectCluster.EnvironmentName == item.EnvironmentName;
+                                var textColor = isSelected ? "white" : "";
+                                <MChip OnClick="()=>OnEnvChipClick(item.EnvironmentName)"
+                                   Outlined="@(_selectEnvName != item.EnvironmentName)"
+                                   Style="@($"border:1px solid {@item.EnvironmentColor} !important;")"
+                                   Color="@item.EnvironmentColor"
+                                   TextColor="@textColor"
+                                   Class="mr-3 mt-3 text-overflow">
+                                    @item.EnvironmentName
+                                </MChip>
+                            }
+                        </MChipGroup>
                     </MRow>
-                }
-                <MRow NoGutters Class="regular3--text btn mt-6">@T("Environment")</MRow>
-                <MRow NoGutters>
-                    <MChipGroup Column>
-                        @foreach (var item in _appEnvs)
-                        {
-                            var isSelected = _selectCluster.EnvironmentName == item.EnvironmentName;
-                            var textColor = isSelected ? "white" : "";
-                            <MChip OnClick="()=>OnEnvChipClick(item.EnvironmentName)"
-                               Outlined="@(_selectEnvName != item.EnvironmentName)"
-                               Style="@($"border:1px solid {@item.EnvironmentColor} !important;")"
-                               Color="@item.EnvironmentColor"
-                               TextColor="@textColor"
-                               Class="mr-3 mt-3 text-overflow">
-                                @item.EnvironmentName
-                            </MChip>
-                        }
-                    </MChipGroup>
-                </MRow>
-                <MRow NoGutters Class="regular3--text btn mt-6">@T("Cluster")</MRow>
-                <MRow NoGutters>
-                    <MChipGroup Column>
-                        @foreach (var item in _appClusters)
-                        {
-                            var isSelected = _selectCluster.ClusterName == item.ClusterName;
-                            var textColor = isSelected ? "white" : "";
-                            <MChip OnClick="()=>OnClusterChipClick(item)"
-                               Outlined="@(!isSelected)"
-                               TextColor="@textColor"
-                               Color="#323D6F"
-                               Class="mr-3 mt-3 text-overflow">
-                                @item.ClusterName
-                            </MChip>
-                        }
-                    </MChipGroup>
-                </MRow>
+                    <MRow NoGutters Class="regular3--text btn mt-6">@T("Cluster")</MRow>
+                    <MRow NoGutters>
+                        <MChipGroup Column>
+                            @foreach (var item in _appClusters)
+                            {
+                                var isSelected = _selectCluster.ClusterName == item.ClusterName;
+                                var textColor = isSelected ? "white" : "";
+                                <MChip OnClick="()=>OnClusterChipClick(item)"
+                                   Outlined="@(!isSelected)"
+                                   TextColor="@textColor"
+                                   Color="#323D6F"
+                                   Class="mr-3 mt-3 text-overflow">
+                                    @item.ClusterName
+                                </MChip>
+                            }
+                        </MChipGroup>
+                    </MRow>
+                </div>
             </div>
         </div>
         @if (ConfigObjectType == ConfigObjectType.App)
@@ -138,9 +140,9 @@
                                                 string tempContent = configObject.TempContent.Replace("\n", "").Replace(" ", "").Replace("\t", "").Replace("\r", "");
                                                 if (configObject.RelationConfigObjectId == 0 && !configObject.IsPublished && content != tempContent)
                                                 {
-                                                    <div class="mr-2" style="height: 26px; padding:0 6px; background: #FF7D00; text-align: center; font-size: 12px;color: white; border-radius: 16px; font-weight: normal; line-height: 26px;">
-                                                        @T("Modified")
-                                                    </div>
+                                                                <div class="mr-2" style="height: 26px; padding:0 6px; background: #FF7D00; text-align: center; font-size: 12px;color: white; border-radius: 16px; font-weight: normal; line-height: 26px;">
+                                                                    @T("Modified")
+                                                                </div>
                                                 }
                                             }
                                             <MHover Context="hContext">
@@ -347,7 +349,7 @@
                                     @if (configObject.RelationConfigObjectId != 0)
                                     {
                                         <MCard Style="border:1px solid #E2E7F4;" Class="py-3 mt-4 rounded-5">
-                                            <MDataTable FixedHeader Height="312" Headers="Headers"
+                                            <MDataTable FixedHeader Style="max-height: 312px; overflow: auto;" Headers="Headers"
                                             SortDesc="true"
                                             SortBy="new List<string>{ nameof(ConfigObjectPropertyModel.IsPublished) }"
                                             TItem="ConfigObjectPropertyModel"
@@ -402,7 +404,7 @@
                                            Tabs="@(new List<string>{ T("Table"), T("Text") })">
                                             <SElevationTabItem>
                                                 <MCard Style="border:1px solid #E2E7F4; padding: 1px;" Class="py-3 mt-4 rounded-5">
-                                                    <MDataTable FixedHeader Height="312" Headers="Headers"
+                                                    <MDataTable FixedHeader Style="max-height: 312px; overflow: auto;" Headers="Headers"
                                                     SortDesc="true"
                                                     SortBy="new List<string>{ nameof(ConfigObjectPropertyModel.IsPublished) }"
                                                     TItem="ConfigObjectPropertyModel"
@@ -492,9 +494,9 @@
                                                 string tempContent = configObject.TempContent.Replace("\n", "").Replace(" ", "").Replace("\t", "").Replace("\r", "");
                                                 if (configObject.RelationConfigObjectId == 0 && !configObject.IsPublished && !configObject.IsEditing && content != tempContent)
                                                 {
-                                                    <div class="mr-2" style="height: 26px; padding:0 6px; background: #FF7D00; text-align: center; font-size: 12px;color: white; border-radius: 16px; font-weight: normal; line-height: 26px;">
-                                                        @T("Modified")
-                                                    </div>
+                                                                <div class="mr-2" style="height: 26px; padding:0 6px; background: #FF7D00; text-align: center; font-size: 12px;color: white; border-radius: 16px; font-weight: normal; line-height: 26px;">
+                                                                    @T("Modified")
+                                                                </div>
                                                 }
                                             }
                                             <MHover Context="hContext">
@@ -670,31 +672,31 @@
                         {
                             int index = _index;
                             _index++;
-                            <MTimelineItem Class="d-flex align-start" HideDot="!release.IsActive" Small FillDot Right @onclick="()=>OnTimelineItemClickAsync(release)">
-                                <IconContent>
-                                    <MIcon Size="20" Color="primary">mdi-circle</MIcon>
-                                </IconContent>
-                                <OppositeContent>
-                                    <div>
-                                        <div style="@(release.IsActive ? "font-size:14px; font-weight: 600; color: #1B2559;" : "font-size:12px; font-weight: 500; color: #485585;")">
-                                            @release.CreationTime.ToString("MM-dd").TrimStart('0')
-                                        </div>
-                                        @if (index == 0)
+                                        <MTimelineItem Class="d-flex align-start" HideDot="!release.IsActive" Small FillDot Right @onclick="()=>OnTimelineItemClickAsync(release)">
+                                            <IconContent>
+                                                <MIcon Size="20" Color="primary">mdi-circle</MIcon>
+                                            </IconContent>
+                                            <OppositeContent>
+                                                <div>
+                                                    <div style="@(release.IsActive ? "font-size:14px; font-weight: 600; color: #1B2559;" : "font-size:12px; font-weight: 500; color: #485585;")">
+                                                        @release.CreationTime.ToString("MM-dd").TrimStart('0')
+                                                    </div>
+                                                    @if (index == 0)
                                         {
-                                            <div style="font-size:10px; font-weight: 400; color: #A3AED0;">@T("Current")</div>
+                                                        <div style="font-size:10px; font-weight: 400; color: #A3AED0;">@T("Current")</div>
                                         }
                                         else if (release.IsInvalid)
                                         {
-                                            <div style="font-size:10px; font-weight: 400; color: #A3AED0;">@T("Rollbacked")</div>
+                                                        <div style="font-size:10px; font-weight: 400; color: #A3AED0;">@T("Rollbacked")</div>
                                         }
-                                    </div>
-                                </OppositeContent>
-                                <ChildContent>
-                                    <div class="text-overflow2" style="@(release.IsActive ? "font-size:14px; font-weight: 600; color: #1B2559; width: 80px;" : "font-size:12px; font-weight: 500; color: #485585; width: 80px;")">
-                                        @release.Name
-                                    </div>
-                                </ChildContent>
-                            </MTimelineItem>
+                                                </div>
+                                            </OppositeContent>
+                                            <ChildContent>
+                                                <div class="text-overflow2" style="@(release.IsActive ? "font-size:14px; font-weight: 600; color: #1B2559; width: 80px;" : "font-size:12px; font-weight: 500; color: #485585; width: 80px;")">
+                                                    @release.Name
+                                                </div>
+                                            </ChildContent>
+                                        </MTimelineItem>
                         }
                     }
                 </MTimeline>
